# ComfyUI-ShellLink

./: README.md  README_EN.md  __init__.py  api.py  pyproject.toml  工作区和通道.txt  开发指南.md
locales/zh/: settings.json
nodes/: config_node.py
web/: all_merged_javascript.txt  api_injector.js  clab_i18n.js  clab_settings.js  main.js  state_manager.js  ui_panel.js
web/components/: comp_channel.js  comp_contextmenu.js  comp_modulearea.js  comp_taskcard.js  comp_toolbar.js  comp_workspace.js  patch.py  patch2.py  ui_selection.js  ui_state.js  ui_utils.js
web/components/actions/: action_batch_sync.js  action_binding.js  action_data_io.js  action_module_config.js  action_run_executor.js
web/components/events/: event_execution.js  event_global.js  event_panel.js
web/components/modules/: module_input.js  module_media.js  module_output.js
web/components/modules/media_types/: media_audio.js  media_file.js  media_image.js  media_text.js  media_utils.js  media_video.js
web/docs/: 国际化指南.md  开发指南.md  开发者功能映射手册.md  更新日志.md
